--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.8.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "socket.io": "^2.0.3"
   }
 }
